Here's the commented version of the code:

```c++
// Copyright 2023 gRPC authors.

// Include necessary headers
#include <grpcpp/ext/gcp_observability.h>       // For GCP observability features
#include <grpcpp/ext/proto_server_reflection_plugin.h> // For server reflection
#include <grpcpp/grpcpp.h>                      // Core gRPC functionality
#include <grpcpp/health_check_service_interface.h> // For health check service

#include <chrono>       // For time-related functions
#include <csignal>      // For signal handling
#include <iostream>     // For I/O operations
#include <memory>       // For smart pointers
#include <string>       // For string operations
#include <thread>       // For thread operations

#include "absl/flags/flag.h"     // For command-line flags
#include "absl/flags/parse.h"    // For parsing command-line arguments
#include "absl/log/initialize.h" // For initializing logging
#include "absl/strings/str_format.h" // For string formatting

// Include the generated protobuf headers
#ifdef BAZEL_BUILD
#include "examples/protos/helloworld.grpc.pb.h"  // Path for Bazel build
#else
#include "helloworld.grpc.pb.h"                  // Path for non-Bazel build
#endif

// Using declarations for commonly used gRPC and protobuf types
using grpc::Server;
using grpc::ServerBuilder;
using grpc::ServerContext;
using grpc::Status;
using helloworld::Greeter;
using helloworld::HelloReply;
using helloworld::HelloRequest;

// Define a command-line flag for the server port with default value 50051
ABSL_FLAG(uint16_t, port, 50051, "Server port for the service");

namespace {

// Global flag to indicate shutdown request from signal handler
volatile std::sig_atomic_t g_shutdown_flag = 0;

// Signal handler function for graceful shutdown
void signal_handler(int signal) {
  g_shutdown_flag = 1;  // Set shutdown flag
  std::signal(signal, SIG_DFL);  // Reset to default signal handler
}

// Implementation of the Greeter service
class GreeterServiceImpl final : public Greeter::Service {
 public:
  // Implementation of the SayHello RPC method
  Status SayHello(ServerContext* context, const HelloRequest* request,
                  HelloReply* reply) override {
    std::string prefix("Hello ");
    reply->set_message(prefix + request->name());  // Set reply message
    return Status::OK;  // Return OK status
  }
};

// Function to run the gRPC server
void RunServer(uint16_t port) {
  // Create server address string
  std::string server_address = absl::StrFormat("0.0.0.0:%d", port);
  GreeterServiceImpl service;  // Create service instance

  // Enable default health check service
  grpc::EnableDefaultHealthCheckService(true);
  // Initialize server reflection plugin
  grpc::reflection::InitProtoReflectionServerBuilderPlugin();

  ServerBuilder builder;  // Create server builder

  // Add listening port with insecure credentials (no encryption)
  builder.AddListeningPort(server_address, grpc::InsecureServerCredentials());

  // Register our service implementation
  builder.RegisterService(&service);

  // Build and start the server
  std::unique_ptr<Server> server(builder.BuildAndStart());
  std::cout << "Server listening on " << server_address << std::endl;

  // Main server loop - runs until shutdown signal is received
  while (!g_shutdown_flag) {
    std::this_thread::sleep_for(std::chrono::milliseconds(100));
  }
  // Shutdown the server gracefully
  server->Shutdown();
}

}  // namespace

// Main program entry point
int main(int argc, char** argv) {
  // Parse command-line arguments
  absl::ParseCommandLine(argc, argv);
  // Initialize logging
  absl::InitializeLog();

  // Register signal handler for SIGINT (Ctrl+C)
  std::signal(SIGINT, signal_handler);

  // Initialize GCP observability
  auto observability = grpc::GcpObservability::Init();
  if (!observability.ok()) {
    // Log error if observability initialization fails
    std::cerr << "GcpObservability::Init() failed: "
              << observability.status().ToString() << std::endl;
    return static_cast<int>(observability.status().code());
  }
  std::cout << "Initialized GCP Observability" << std::endl;

  // Run the server with the specified port
  RunServer(absl::GetFlag(FLAGS_port));

  // Final message before exiting
  std::cout << "Closing and flushing GCP Observability data" << std::endl;
  return 0;
}
```

Key aspects covered in the comments:
1. Header file purposes
2. Important namespace declarations
3. Signal handling mechanism
4. Service implementation details
5. Server setup and configuration
6. Main program flow
7. Error handling
8. Observability integration
9. Command-line flag usage

The comments are designed to help future developers understand:
- The overall architecture
- Key components and their roles
- Important implementation details
- Control flow through the system
- Configuration points
- Error handling strategy