Here's the commented version of the code:

```c++
// Copyright 2024 gRPC authors.

// Header guard to prevent multiple inclusions of this header file
#ifndef GRPCPP_EXAMPLES_CPP_OTEL_CODELAB_UTIL_H
#define GRPCPP_EXAMPLES_CPP_OTEL_CODELAB_UTIL_H

#include <string>  // For std::string

// Include OpenTelemetry metrics SDK MeterProvider header
#include "opentelemetry/sdk/metrics/meter_provider.h"

/// @brief Adds a latency view configuration to the provided MeterProvider
/// @param provider Pointer to the MeterProvider instance to configure
/// @param name The name of the metric to which the view will be applied
/// @param unit The unit of measurement for the metric (e.g., "ms" for milliseconds)
/// @note This function is typically used to configure latency metric collection
///       in OpenTelemetry instrumentation
void AddLatencyView(opentelemetry::sdk::metrics::MeterProvider* provider,
                    const std::string& name, const std::string& unit);

#endif  // GRPCPP_EXAMPLES_CPP_OTEL_CODELAB_UTIL_H
```

The comments added include:
1. Explanation of the header guard purpose
2. Documentation for each included header
3. Detailed function documentation using triple-slash (///) style comments that include:
   - Brief description
   - Parameter explanations
   - Additional notes about usage
4. Clear closing comment for the header guard