Here's the commented version of the code:

```c++
/*
 *
 * Copyright 2021 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

#ifndef HAVE_ABSEIL
#define HAVE_ABSEIL
#endif

// Include necessary headers
#include <grpcpp/ext/otel_plugin.h>  // For OpenTelemetry plugin support
#include <grpcpp/grpcpp.h>           // Main gRPC C++ header

#include <condition_variable>  // For thread synchronization
#include <mutex>               // For mutex support
#include <string>              // For string handling

// Abseil and OpenTelemetry headers
#include "absl/flags/flag.h"     // For command line flags
#include "absl/flags/parse.h"    // For parsing command line flags
#include "absl/log/initialize.h" // For log initialization
#include "opentelemetry/exporters/prometheus/exporter_factory.h"  // Prometheus exporter
#include "opentelemetry/exporters/prometheus/exporter_options.h"  // Prometheus options
#include "opentelemetry/sdk/metrics/meter_provider.h"             // Metrics provider

// Conditional includes based on build system
#ifdef BAZEL_BUILD
#include "examples/cpp/otel/codelab/util.h"       // Utility functions
#include "examples/protos/helloworld.grpc.pb.h"   // gRPC generated code
#else
#include "helloworld.grpc.pb.h"                   // gRPC generated code
#include "util.h"                                 // Utility functions
#endif

// Define command line flags using Abseil
ABSL_FLAG(std::string, target, "localhost:50051", "Server address");
ABSL_FLAG(std::string, prometheus_endpoint, "localhost:9465",
          "Prometheus exporter endpoint");

namespace {

// Using declarations for cleaner code
using grpc::Channel;
using grpc::ClientContext;
using grpc::Status;
using helloworld::Greeter;
using helloworld::HelloReply;
using helloworld::HelloRequest;

/**
 * @brief Client for the Greeter service.
 * 
 * This class provides methods to interact with the Greeter gRPC service.
 */
class GreeterClient {
 public:
  /**
   * @brief Construct a new Greeter Client object
   * 
   * @param channel The gRPC channel to use for communication
   */
  GreeterClient(std::shared_ptr<Channel> channel)
      : stub_(Greeter::NewStub(channel)) {}

  /**
   * @brief Calls the SayHello RPC method asynchronously
   * 
   * @param user The name to send in the HelloRequest
   * @return std::string The response message from server or error message
   */
  std::string SayHello(const std::string& user) {
    // Prepare the request
    HelloRequest request;
    request.set_name(user);

    HelloReply reply;
    ClientContext context;

    // Synchronization primitives for async call
    std::mutex mu;
    std::condition_variable cv;
    bool done = false;
    Status status;

    // Make asynchronous call
    stub_->async()->SayHello(&context, &request, &reply,
                             [&mu, &cv, &done, &status](Status s) {
                               // Callback handler
                               status = std::move(s);
                               std::lock_guard<std::mutex> lock(mu);
                               done = true;
                               cv.notify_one();
                             });

    // Wait for the async call to complete
    std::unique_lock<std::mutex> lock(mu);
    while (!done) {
      cv.wait(lock);
    }

    // Process the response
    if (status.ok()) {
      return reply.message();
    } else {
      std::cout << status.error_code() << ": " << status.error_message()
                << std::endl;
      return "RPC failed";
    }
  }

 private:
  std::unique_ptr<Greeter::Stub> stub_;  // gRPC service stub
};

/**
 * @brief Runs the client in an infinite loop
 * 
 * @param target_str The server address to connect to
 */
void RunClient(const std::string& target_str) {
  grpc::ChannelArguments args;

  // Continuous loop to send requests every second
  while (true) {
    // Create client with insecure channel (no TLS)
    GreeterClient greeter(grpc::CreateCustomChannel(
        target_str, grpc::InsecureChannelCredentials(), args));
    
    std::string user("world");
    std::string reply = greeter.SayHello(user);
    std::cout << "Greeter received: " << reply << std::endl;
    
    // Wait before next request
    std::this_thread::sleep_for(std::chrono::seconds(1));
  }
}

}  // namespace

/**
 * @brief Main entry point for the client application
 * 
 * @param argc Argument count
 * @param argv Argument values
 * @return int Exit status
 */
int main(int argc, char** argv) {
  // Initialize command line parsing and logging
  absl::ParseCommandLine(argc, argv);
  absl::InitializeLog();

  // Run client with target from command line flag
  RunClient(absl::GetFlag(FLAGS_target));

  return 0;
}
```

Key improvements in the comments:
1. Added detailed class and method documentation
2. Explained the purpose of each major code block
3. Clarified the asynchronous call flow and synchronization
4. Documented the purpose of command line flags
5. Added namespace and include section explanations
6. Noted the continuous operation nature of the client
7. Added high-level overview of the client-server interaction

The comments now provide a comprehensive understanding of the code's functionality and structure while maintaining readability.